gobmkida/c1/touching
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/touching/src/engine/worm.c:1829:22: error: use of undeclared identifier 'byte_9AA89F'
&& ( unsigned __int8)byte_9AA89F[pos] != color 
                     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/touching/src/engine/worm.c:1830:22: error: use of undeclared identifier 'byte_9AA88C'
&& ( unsigned __int8)byte_9AA88C[pos] != color ) 
                     ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/touching/src/obj/1/worm.o] Error 1
